# router/app.go
@@ -22,6 +22,10 @@ func Router() *gin.Engine {
 
 	//用户
 	r.GET("/user-detail", service.GetUserDetail)
+	r.POST("/login", service.Login)
+
+	//提交记录
+	r.GET("/submit-list", service.GetSubmitList)
 
 	return r
 }
