# service/submit.go
@@ -1,0 +1,56 @@
+package service
+
+import (
+	"gin_gorm_oj/define"
+	"gin_gorm_oj/models"
+	"github.com/gin-gonic/gin"
+	"log"
+	"net/http"
+	"strconv"
+)
+
+// GetSubmitList
+// @Summary 提交列表
+// @Tags 公共方法
+// @Param page query int false "page"
+// @Param size query int false "size"
+// @Param problem_identity query string false "problem_identity"
+// @Param user_identity query string false "user_identity"
+// @Param status query int false "status"
+// @Success 200 {string} json "{"code":"200","msg","","data":""}"
+// @Router /submit-list [get]
+func GetSubmitList(c *gin.Context) {
+	page, err := strconv.Atoi(c.DefaultQuery("page", define.DefaultPage))
+	if err != nil {
+		log.Println("GetSubmitList page error:", err)
+		return
+	}
+	size, err := strconv.Atoi(c.DefaultQuery("size", define.DefaultSize))
+	if err != nil {
+		log.Println("GetSubmitList size error:", err)
+		return
+	}
+	offset := (page - 1) * size
+	var count int64
+	list := make([]models.SubmitBasic, 0)
+
+	problemIdentity := c.Query("problem_identity")
+	userIdentity := c.Query("user_identity")
+	status, _ := strconv.Atoi(c.Query("status"))
+	tx := models.GetSubmitList(problemIdentity, userIdentity, status)
+	err = tx.Count(&count).Offset(offset).Limit(size).Find(&list).Error
+	if err != nil {
+		log.Println("GetSubmitList error:", err)
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "GetSubmitList error:" + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": map[string]interface{}{
+			"list":  list,
+			"count": count},
+	})
+}
