# service/user.go
@@ -2,9 +2,11 @@ package service
 
 import (
 	"errors"
+	"gin_gorm_oj/helper"
 	"gin_gorm_oj/models"
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
+	"net/http"
 )
 
 // GetUserDetail
@@ -45,4 +47,58 @@ func GetUserDetail(c *gin.Context) {
 		"code": 200,
 		"data": userBasic,
 	})
+}
+
+// Login
+// @Summary 用户登录
+// @Tags 公共方法
+// @Param username formData string false "username"
+// @Param password formData string false "password"
+// @Success 200 {string} json "{"code":"200","msg","","data":""}"
+// @Router /login [post]
+func Login(c *gin.Context) {
+	username := c.PostForm("username")
+	password := c.PostForm("password")
+	if username == "" || password == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "必填信息为空",
+		})
+		return
+	}
+	//md5加密
+	password = helper.GetMd5(password)
+
+	user := new(models.UserBasic)
+	err := models.DB.Where("username = ? AND password = ?", username, password).First(&user).Error
+	if err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "用户名或密码错误",
+			})
+			return
+		}
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Get UserBasic error:" + err.Error(),
+		})
+		return
+	}
+	//生成token
+	token, err := helper.GenerateToken(user.Identity, user.Username)
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "GenerateToken error:" + err.Error(),
+		})
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": map[string]interface{}{
+			"token": token,
+		},
+	})
+
 }
